<resources>

    <string name="app_name">Yamb Friends</string>

    <string name="play_button">Play</string>
    <string name="settings_button">Settings</string>
    <string name="stats_button">Stats</string>
    <string name="sign_in_button">Sign in</string>
    <string name="profile_button">Profile</string>

    <string name="an0_info_no">An0: No</string>
    <string name="an0_info_yes">An0: Yes</string>
    <string name="dice_info_5">Dice: 5</string>
    <string name="dice_info_6">Dice: 6</string>

    <string name="_x_x">Thanks for playing!</string>
    <string name="_1_x">Sum of 1s.</string>
    <string name="_2_x">Sum of 2s.</string>
    <string name="_3_x">Sum of 3s.</string>
    <string name="_4_x">Sum of 4s.</string>
    <string name="_5_x">Sum of 5s.</string>
    <string name="_6_x">Sum of 6s.</string>
    <string name="_eq1_x">Sum of upper rows (1s to 6s). If equal or higher than 60, 30 more is added.</string>
    <string name="_max_x">Maximum. The higher the sum, the better.</string>
    <string name="_min_x">Minimum. The lower the sum, the better.</string>
    <string name="_eq2_x">Product of 1s and maximum-minimum difference.</string>
    <string name="_str_x">Straight. 1&#8211;5 or 2&#8211;6. 66 for the 1st roll, 56 for the 2nd and 46 for the 3rd.</string>
    <string name="_ful_x">Full. Two of a kind alongside three of a another kind.</string>
    <string name="_pok_x">Poker. Four of a kind.</string>
    <string name="_ymb_x">Yamb. Five of a kind.</string>
    <string name="_eq3_x">Sum of upper rows (straight, full, poker and yamb).</string>
    <string name="_x_dwn">Down column.</string>
    <string name="_x_any">Open column.</string>
    <string name="_x_up">Up column.</string>
    <string name="_x_an1">Column for announcements after the 1st roll.</string>
    <string name="_x_an0">Column for announcements before the 1st roll.</string>

    <string name="roll_button">Roll</string>
    <string name="zero">0</string>
    <string name="undo_button">Undo</string>

    <string name="description_dice1">First dice.</string>
    <string name="description_dice2">Second dice.</string>
    <string name="description_dice3">Third dice.</string>
    <string name="description_dice4">Fourth dice.</string>
    <string name="description_dice5">Fifth dice.</string>
    <string name="description_dice6">Sixth dice.</string>

    <string name="end_game_dialog_title">End this game?</string>
    <string name="end_game_dialog_message">If you end this game, its progress will be lost and you won\'t be able to continue it.</string>
    <string name="end_game_dialog_positive_button">Yes, end it</string>
    <string name="end_game_dialog_negative_button">No, don\'t end it</string>

    <string name="settings_title">Settings</string>
    <string name="settings_an0_column_title">Pre-roll Announcement Column</string>
    <string name="settings_dice_count_title">Number of Dice</string>
    <string name="settings_dice_count_default">5</string>
    <string name="settings_handedness_title">Handedness</string>
    <string name="settings_handedness_default">Right-handed</string>
    <string name="settings_shake_roll_title">Shake Roll</string>
    <string name="settings_shake_sensitivity_title">Shake Sensitivity</string>
    <string name="settings_shake_sensitivity_default">Medium</string>
    <string name="settings_sound_title">Sound</string>

    <string name="stats_title">Statistics</string>
    <string name="placeholder">-</string>
    <string name="registered_users_label">Registered users:</string>
    <string name="total_games_played_label">Total games played:</string>
    <string name="games_played_registered_label">Games played (registered):</string>
    <string name="games_played_anonymous_label">Games played (anonymous):</string>
    <string name="leaderboards_label">Leaderboards:</string>
    <string name="an1d5_leaderboard_button">an1d5</string>
    <string name="an1d6_leaderboard_button">an1d6</string>
    <string name="an0d5_leaderboard_button">an0d5</string>
    <string name="an0d6_leaderboard_button">an0d6</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="leaderboard_no1_label">1.</string>
    <string name="leaderboard_no2_label">2.</string>
    <string name="leaderboard_no3_label">3.</string>
    <string name="leaderboard_no4_label">4.</string>
    <string name="leaderboard_no5_label">5.</string>
    <string name="leaderboard_no6_label">6.</string>
    <string name="leaderboard_no7_label">7.</string>
    <string name="leaderboard_no8_label">8.</string>
    <string name="leaderboard_no9_label">9.</string>
    <string name="leaderboard_no10_label">10.</string>

    <string name="sign_in_title">Sign in</string>
    <string name="not_signed_in">You are not signed in!</string>
    <string name="new_account_dialog_button">New account</string>
    <string name="sign_out_button">Sign out</string>
    <string name="google_api_client_connection_fail">Failed connecting to Google API Client</string>
    <string name="google_api_client_connection_interrupted">Connection to Google API Client has been interrupted</string>
    <string name="google_sign_in_fail">Failed signing in to Google</string>
    <string name="unsuccessful_http_response">Unsuccessful HTTP response</string>

    <string name="create_new_account_via_google">Create new account using Google Sign In:</string>
    <string name="create_new_account_regularly">Create new account regularly:</string>
    <string name="create_new_account_button">Create new account</string>
    <string name="sign_in_via_google">Sign in using Google Sign In:</string>
    <string name="sign_in_regularly">Sign in regularly:</string>
    <string name="sign_in_confirm_button">Confirm sign in</string>
    <string name="username_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="username_too_short">Username must be at least 5 characters long</string>
    <string name="password_too_short">Password must be at least 5 characters long</string>

    <string name="profile_title">Profile</string>
    <string name="my_stats_button">My stats</string>
    <string name="capture_an_image_button">Capture an image</string>
    <string name="choose_an_image_button">Choose an image</string>
    <string name="current_profile_image">Current profile image:</string>
    <string name="uploading_image">Uploading image&#8230;</string>
    <string name="image_capture_failed">Image capture failed</string>
    <string name="image_selection_failed">Image selection failed</string>
    <string name="could_not_read_image_file">Could not read image file</string>
    <string name="file_not_found">File not found</string>
    <string name="no_profile_image">No profile image</string>

    <string name="my_stats_title">My stats</string>
    <string name="time_registered_label">Date registered:</string>
    <string name="latitude_label">Last latitude:</string>
    <string name="longitude_label">Last longitude:</string>
    <string name="games_played_label">Games played:</string>
    <string name="games_forfeited_label">Games forfeited:</string>
    <string name="total_time_played_label">Total time played:</string>
    <string name="average_game_duration_label">Average game duration:</string>
    <string name="an1d5_best_label">An1d5 best:</string>
    <string name="an1d6_best_label">An1d6 best:</string>
    <string name="an0d5_best_label">An0d5 best:</string>
    <string name="an0d6_best_label">An0d6 best:</string>
    <string name="an1d5_average_label">An1d5 average:</string>
    <string name="an1d6_average_label">An1d6 average:</string>
    <string name="an0d5_average_label">An0d5 average:</string>
    <string name="an0d6_average_label">An0d6 average:</string>
    <string name="php_error">PHP error</string>

</resources>
