<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_title_bottom_margin"
        android:text="@string/app_name"
        android:textSize="@dimen/main_title_size"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/play_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/play_button"/>

    <TextView
        android:id="@+id/an0_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/an0_info_no"
        android:gravity="center"/>

    <TextView
        android:id="@+id/dice_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dice_info_5"
        android:gravity="center"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/default_top_margin"
        android:text="@string/settings_button"/>

    <Button
        android:id="@+id/stats_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/default_top_margin"
        android:text="@string/stats_button"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/default_top_margin"
        android:text="@string/sign_in_button"/>

    <Button
        android:id="@+id/profile_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/default_top_margin"
        android:text="@string/profile_button"/>

    <TextView
        android:id="@+id/profile_info_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_signed_in"
        android:gravity="center"/>

</LinearLayout>
