<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.plazonic.tomislav.yambfriends.SignInActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <Button
        android:id="@+id/new_account_dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account_dialog_button" />

    <Button
        android:id="@+id/sign_in_dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_button" />

    <TextView
        android:id="@+id/profile_info_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_signed_in"
        android:gravity="center" />

</LinearLayout>