<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_activity_padding"
    tools:context=".SignInDialogActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:id="@+id/sign_in_via_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_via_google"
        android:gravity="center"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/sign_in_line_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/line_separator_margin"
        android:layout_marginBottom="@dimen/line_separator_margin"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/sign_in_regularly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_regularly"
        android:gravity="center"/>

    <EditText
        android:id="@+id/sign_in_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:inputType="textPersonName"
        android:maxLength="@integer/username_max_length"
        android:imeOptions="actionNext"
        android:hint="@string/username_hint"/>

    <EditText
        android:id="@+id/sign_in_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:inputType="textVisiblePassword"
        android:imeOptions="actionDone"
        android:hint="@string/password_hint"/>

    <Button
        android:id="@+id/regular_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_button_margin"
        android:text="@string/sign_in_confirm_button"/>

</LinearLayout>
