<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.plazonic.tomislav.yambfriends.StatsActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:id="@+id/stats_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_bottom_margin"
        android:text="@string/stats_title"
        android:textSize="@dimen/title_size"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/registered_users_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/registered_users_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registered_users_label"
            android:gravity="center"/>

        <TextView
            android:id="@+id/registered_users_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:layout_marginStart="@dimen/default_side_margin"
            android:text="@string/placeholder"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/total_games_played_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/total_games_played_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_games_played_label"
            android:gravity="center"/>

        <TextView
            android:id="@+id/total_games_played_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:layout_marginStart="@dimen/default_side_margin"
            android:text="@string/placeholder"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/games_played_registered_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/games_played_registered_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/games_played_registered_label"
            android:gravity="center"/>

        <TextView
            android:id="@+id/games_played_registered_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:layout_marginStart="@dimen/default_side_margin"
            android:text="@string/placeholder"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/games_played_anonymous_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/games_played_anonymous_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/games_played_anonymous_label"
            android:gravity="center"/>

        <TextView
            android:id="@+id/games_played_anonymous_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:layout_marginStart="@dimen/default_side_margin"
            android:text="@string/placeholder"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/leaderboards_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_top_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/leaderboards_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaderboards_label"
            android:gravity="center"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/an1_leaderboards_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin">

            <Button
                android:id="@+id/an1d5_leaderboard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an1d5_leaderboard_button" />

            <Button
                android:id="@+id/an1d6_leaderboard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_side_margin"
                android:layout_marginStart="@dimen/default_side_margin"
                android:text="@string/an1d6_leaderboard_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/an0_leaderboards_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin">

            <Button
                android:id="@+id/an0d5_leaderboard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/an0d5_leaderboard_button" />

            <Button
                android:id="@+id/an0d6_leaderboard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_side_margin"
                android:layout_marginStart="@dimen/default_side_margin"
                android:text="@string/an0d6_leaderboard_button" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
