<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.plazonic.tomislav.yambfriends.GameActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/gridview_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridView
            android:id="@+id/gridview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:numColumns="5"
            android:background="@color/black"
            android:layout_margin="@dimen/gridview_margin"
            android:verticalSpacing="@dimen/gridview_spacing"
            android:horizontalSpacing="@dimen/gridview_spacing" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dices_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/dice_size"
            android:layout_height="@dimen/dice_size"
            android:id="@+id/dice_view_1"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:src="@drawable/dice_1"
            android:contentDescription="@string/description_dice1"
            android:onClick="diceClick" />

        <ImageView
            android:layout_width="@dimen/dice_size"
            android:layout_height="@dimen/dice_size"
            android:id="@+id/dice_view_2"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:src="@drawable/dice_2"
            android:contentDescription="@string/description_dice2"
            android:onClick="diceClick" />

        <ImageView
            android:layout_width="@dimen/dice_size"
            android:layout_height="@dimen/dice_size"
            android:id="@+id/dice_view_3"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:src="@drawable/dice_3"
            android:contentDescription="@string/description_dice3"
            android:onClick="diceClick" />

        <ImageView
            android:layout_width="@dimen/dice_size"
            android:layout_height="@dimen/dice_size"
            android:id="@+id/dice_view_4"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:src="@drawable/dice_4"
            android:contentDescription="@string/description_dice4"
            android:onClick="diceClick" />

        <ImageView
            android:layout_width="@dimen/dice_size"
            android:layout_height="@dimen/dice_size"
            android:id="@+id/dice_view_5"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:src="@drawable/dice_5"
            android:contentDescription="@string/description_dice5"
            android:onClick="diceClick" />

        <ImageView
            android:layout_width="@dimen/dice_size"
            android:layout_height="@dimen/dice_size"
            android:id="@+id/dice_view_6"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:src="@drawable/dice_6"
            android:contentDescription="@string/description_dice6"
            android:onClick="diceClick" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/other_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_top_margin">

        <Button
            android:id="@+id/roll_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:text="@string/roll_button"
            android:textSize="@dimen/game_text_size" />

        <TextView
            android:id="@+id/roll_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:text="@string/zero"
            android:textSize="@dimen/game_text_size"/>

        <Chronometer
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:textSize="@dimen/game_text_size"/>

        <Button
            android:id="@+id/undo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginLeft="@dimen/default_side_margin"
            android:text="@string/undo_button"
            android:textSize="@dimen/game_text_size" />

    </LinearLayout>

</LinearLayout>
